--- a/.github/workflows/verify-patches.yml
+++ b/.github/workflows/verify-patches.yml
@@ -150,7 +150,7 @@ jobs:
 
           # Install the package with test dependencies
           echo "::group::Installing package with dependencies"
-          uv pip install -e ".[tests,opensearch2,s3,devs,s3fs,oaipmh,rdf,sparql,postgresql,admin]"
+          uv pip install -e ".[tests,opensearch2,s3,devs,s3fs,oaipmh,rdf,sparql,postgresql,admin,docs]"
           echo "::endgroup::"
           echo "✓ Virtual environment created and dependencies installed"
           echo "SO_FAR_OK=1" >> $GITHUB_ENV
