--- a/.github/workflows/verify-patches.yml
+++ b/.github/workflows/verify-patches.yml
@@ -363,6 +363,9 @@ jobs:
     if: always()
 
     steps:
+      - name: Checkout verification repository
+        uses: actions/checkout@v4
+
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
@@ -712,14 +715,17 @@ jobs:
           mv reports/reports.md.tmp reports/reports.md
           cat reports/reports.md
 
-      # - name: Commit and push reports index
-      #   run: |
-      #     cd repo
-      #     git config user.name "github-actions[bot]"
-      #     git config user.email "github-actions[bot]@users.noreply.github.com"
-      #     git add reports/reports.md
-      #     git commit -m "Add report for $(basename ${REPORT_DIR})" || echo "No changes to commit"
-      #     git push
+      - name: Commit and push reports index
+        run: |
+          # Copy report to repo directory
+          cp -r ${REPORT_DIR} repo/reports/results/
+
+          cd repo
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add reports/
+          git commit -m "[skip ci] Add report for $(basename ${REPORT_DIR})" || echo "No changes to commit"
+          git push
 
       - name: Upload the report dir as artifact
         uses: actions/upload-artifact@v4
