Working on workflow

--- a/.github/actions/run-tests/action.yml
+++ b/.github/actions/run-tests/action.yml
@@ -31,7 +31,7 @@ runs:
         echo "🧪 Running tests on ${{ inputs.test-type }} package"
         echo "::group::Test execution (${{ inputs.test-type }})"
         set +e
-        echo bash run-tests.sh 2>&1 | tee ../artifacts/test-output-${{ inputs.test-type }}.txt
+        bash run-tests.sh 2>&1 | tee ../artifacts/test-output-${{ inputs.test-type }}.txt
         TEST_EXIT_CODE=${PIPESTATUS[0]}
         set -e
         echo "::endgroup::"
