--- a/.github/actions/run-tests/action.yml
+++ b/.github/actions/run-tests/action.yml
@@ -14,6 +14,10 @@ inputs:
     description: 'Timeout in seconds for test execution (0 = no timeout)'
     required: false
     default: '3600'
+  verbose-pytest:
+    description: 'Run pytest with verbose output (-vv -s)'
+    required: false
+    default: 'false'
 outputs:
   conclusion:
     description: 'Test conclusion (success or failure)'
@@ -34,6 +38,14 @@ runs:
 
         TIMEOUT=${{ inputs.timeout }}
         TIMEOUT_TRIGGERED=0
+
+        # Modify run-tests.sh for verbose pytest if requested
+        if [ "${{ inputs.verbose-pytest }}" = "true" ]; then
+          if [ -f run-tests.sh ]; then
+            echo "Enabling verbose pytest output (-vv -s)"
+            sed -i 's/python -m pytest /python -m pytest -vv -s /g' run-tests.sh
+          fi
+        fi
 
         # Start timeout watchdog in background if timeout is set
         if [ "$TIMEOUT" -gt 0 ]; then
