Checking out the verification repository

--- a/.github/workflows/verify-patches.yml
+++ b/.github/workflows/verify-patches.yml
@@ -571,6 +571,9 @@ jobs:
       contents: write
 
     steps:
+      - name: Checkout verification repository
+        uses: actions/checkout@v4
+
       - name: Generate and push report
         uses: ./.github/actions/generate-report
         with:
